# src/main/java/victor/testing/spring/rest/ProductApi.java
@@ -6,20 +6,24 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.annotation.Secured;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
-import victor.testing.spring.service.ProductService;
+import victor.testing.spring.export.ProductExporter;
+import victor.testing.spring.rest.dto.ProductDto;
 import victor.testing.spring.rest.dto.ProductSearchCriteria;
 import victor.testing.spring.rest.dto.ProductSearchResult;
-import victor.testing.spring.rest.dto.ProductDto;
+import victor.testing.spring.service.ProductService;
 
+import java.io.IOException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.util.List;
+import java.util.UUID;
 
 @RestController
 @RequiredArgsConstructor
 @Slf4j
 public class ProductApi {
    private final ProductService service;
+   private final ProductExporter productExporter;
 
    @PostMapping("product/create")
    @Secured("ROLE_ADMIN")
@@ -39,4 +43,14 @@ public class ProductApi {
       return service.getProduct(id);
    }
 
+   @DeleteMapping("product/{id}")
+   public void delete(@PathVariable long id) {
+      service.deleteProduct(id);
+   }
+
+   @PostMapping("product/export")
+   public String startExport() throws IOException {
+      String fileName = productExporter.export();
+      return "Exported to: " + fileName;
+   }
 }
